fix Shadow gap on hover

--- a/apps/amazin/src/app/nav.css
+++ b/apps/amazin/src/app/nav.css
@@ -384,20 +384,16 @@
   color: #ccc;
 }
 .shadow-of__ {
-  opacity: 0;
-}
-.shadow-of__navSearch,
-.shadow-of__navDrop {
-  position: absolute;
-  display: block;
-  top: 99px;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  grid-area: main;
   background-color: #0008;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+.shadow-of__.navSearch,
+.shadow-of__.navDrop {
   opacity: 1;
   z-index: 9;
-  transition: opacity 0.6s ease-in-out;
 }
 
 .dropdown__menu {
